@@ -49,6 +49,8 @@ Release 0.2.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+    HCAT-53. HCatLoader, HCatStorer, HCatInputFormat, and HCatOutputFormat assume Hadoop running in secure mode (ashutoshc via gates)
+
     HCAT-57. Remove usage of deprecated methods (hashutosh)
    
     HCAT-59. Assimilate new changes in listener interface (hashutosh)
